--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,7 +12,10 @@
         "string": "cpp",
         "vector": "cpp",
         "typeinfo": "cpp",
-        "ostream": "cpp"
+        "ostream": "cpp",
+        "cmath": "c",
+        "random": "c",
+        "numbers": "c"
     },
     "code-runner.executorMap": {
         "cpp": "cd $dir && g++ -I.. main.cpp student.cpp -o $fileNameWithoutExt && $dir$fileNameWithoutExt",
